# flask-InkCircle-beyond-crud

./: .env  .env.example  .gitignore  Dockerfile  README.md  celery_tasks.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
notes/: authpy.txt  bookspy.txt  cms.txt  note1.txt
src/: app.py  config.py  errors.py  extensions.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/books/: routes.py  schemas.py  service.py
src/db/: models.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  schemas.py  service.py
